--- a/package.json
+++ b/package.json
@@ -25,6 +25,6 @@
     "build": "npm run build-css && react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "deploy": "gh-pages -d build"
+    "deploy": "npm run build-css && react-scripts build && gh-pages -d build"
   }
 }
