--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "app",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "homepage": "./",
   "dependencies": {
     "bootstrap": "^4.0.0-beta",
     "classnames": "^2.2.5",
-    "node-sass-chokidar": "0.0.3",
-    "npm-run-all": "^4.1.1",
+    "pdfjs-dist": "^2.0.87",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-dropzone": "^4.2.1",
@@ -15,7 +14,9 @@
   },
   "devDependencies": {
     "gh-pages": "^1.0.0",
-    "react-scripts": "1.0.14"
+    "react-scripts": "1.0.14",
+    "node-sass-chokidar": "0.0.3",
+    "npm-run-all": "^4.1.1"
   },
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
@@ -25,6 +26,6 @@
     "build": "npm run build-css && react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "deploy": "npm run build-css && react-scripts build && gh-pages -d build"
+    "deploy": "npm run build && gh-pages -d build"
   }
 }
