--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "app",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "private": true,
   "homepage": "./",
   "dependencies": {
@@ -10,7 +10,10 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-dropzone": "^4.2.1",
-    "reactstrap": "^5.0.0-alpha.3"
+    "react-redux": "^5.0.6",
+    "reactstrap": "^5.0.0-alpha.3",
+    "redux": "^3.7.2",
+    "redux-form": "^7.1.2"
   },
   "devDependencies": {
     "gh-pages": "^1.0.0",
