--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "react-dom": "^16.0.0",
     "react-dropzone": "^4.2.1",
     "react-redux": "^5.0.6",
+    "react-scrollbar": "^0.5.1",
+    "react-transition-group": "^2.2.1",
     "reactstrap": "^5.0.0-alpha.3",
     "redux": "^3.7.2",
     "redux-form": "^7.1.2"
