--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "bootstrap": "^4.0.0-beta",
     "classnames": "^2.2.5",
+    "lodash": "^4.17.4",
     "pdfjs-dist": "^2.0.87",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
